# ssherald

./: .gitignore  Cargo.toml  README.md  build-release.sh
src/: app.rs  main.rs  theme.rs
src/config/: sessions.rs
src/ssh/: forward.rs  mod.rs  session.rs  sftp.rs
src/terminal/: emulator.rs  mod.rs  widget.rs
